[gd_scene load_steps=10 format=2]

[ext_resource path="res://Code/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Code/Polish/Circle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/BombShroom/BombShroom.gd" type="Script" id=3]
[ext_resource path="res://Enemies/BombShroom/Sprites/IMG_1489.PNG" type="Texture" id=4]
[ext_resource path="res://Enemies/BombShroom/Sprites/IMG_1491.PNG" type="Texture" id=5]
[ext_resource path="res://Enemies/BombShroom/Sprites/IMG_1492.PNG" type="Texture" id=6]
[ext_resource path="res://Enemies/BombShroom/Sprites/IMG_1490.PNG" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="BombShroom" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Circle" parent="." instance=ExtResource( 2 )]
visible = false
polygon = PoolVector2Array( 0, 0, 10, 0, 9.80785, 1.9509, 9.2388, 3.82683, 8.3147, 5.5557, 7.07107, 7.07107, 5.5557, 8.3147, 3.82683, 9.2388, 1.9509, 9.80785, 6.12303e-16, 10, -1.9509, 9.80785, -3.82683, 9.2388, -5.5557, 8.3147, -7.07107, 7.07107, -8.3147, 5.5557, -9.2388, 3.82683, -9.80785, 1.9509, -10, 1.22461e-15, -9.80785, -1.9509, -9.2388, -3.82683, -8.3147, -5.5557, -7.07107, -7.07107, -5.5557, -8.3147, -3.82683, -9.2388, -1.9509, -9.80785, -1.83691e-15, -10, 1.9509, -9.80785, 3.82683, -9.2388, 5.5557, -8.3147, 7.07107, -7.07107, 8.3147, -5.5557, 9.2388, -3.82683, 9.80785, -1.9509, 10, -2.44921e-15 )
uv = PoolVector2Array( 0.5, 0.5, 1, 0.5, 0.990393, 0.597545, 0.96194, 0.691342, 0.915735, 0.777785, 0.853553, 0.853553, 0.777785, 0.915735, 0.691342, 0.96194, 0.597545, 0.990393, 0.5, 1, 0.402455, 0.990393, 0.308658, 0.96194, 0.222215, 0.915735, 0.146447, 0.853553, 0.0842652, 0.777785, 0.0380602, 0.691342, 0.00960736, 0.597545, 0, 0.5, 0.00960736, 0.402455, 0.0380602, 0.308658, 0.0842652, 0.222215, 0.146447, 0.146447, 0.222215, 0.0842652, 0.308658, 0.0380602, 0.402455, 0.00960736, 0.5, 0, 0.597545, 0.00960736, 0.691342, 0.0380602, 0.777785, 0.0842652, 0.853553, 0.146447, 0.915735, 0.222215, 0.96194, 0.308658, 0.990393, 0.402455, 1, 0.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.34103, -1.10835 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyData" parent="." instance=ExtResource( 1 )]
colArea = NodePath("../CollisionShape2D")
freeParentOnDeath = false

[node name="VibrateTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.55
